--- a/publish/src/main/AndroidManifest.xml
+++ b/publish/src/main/AndroidManifest.xml
@@ -5,9 +5,14 @@
 
     <application android:allowBackup="true"
         android:label="@string/app_name"
-        android:supportsRtl="true"
->
-
+        android:supportsRtl="true">
+        <activity android:name=".activity.Release_Bianming_Activity"/>
+        <activity android:name=".activity.Release_Meishi_Activity"/>
+        <activity android:name=".activity.Release_Currency_Activity"/>
+        <activity android:name=".activity.Release_Fangchan_Activity"/>
+        <activity android:name=".activity.Release_Fangchan_Zuping_Activity"/>
+        <activity android:name=".activity.Release_Gongzuo_Activity"/>
+        <activity android:name=".activity.Release_Tiaozao_Activity"/>
     </application>
 
 </manifest>
